; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpio/extr_max732x.c_max732x_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpio/extr_max732x.c_max732x_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.max732x_chip = type { %struct.i2c_client*, %struct.i2c_client* }
%struct.i2c_client = type { i32 }

@.str = private unnamed_addr constant [16 x i8] c"failed writing\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.max732x_chip*, i32, i32)* @max732x_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max732x_write(%struct.max732x_chip* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.max732x_chip*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.i2c_client*, align 8
  %9 = alloca i32, align 4
  store %struct.max732x_chip* %0, %struct.max732x_chip** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load %struct.max732x_chip*, %struct.max732x_chip** %5, align 8
  %14 = getelementptr inbounds %struct.max732x_chip, %struct.max732x_chip* %13, i32 0, i32 1
  %15 = load %struct.i2c_client*, %struct.i2c_client** %14, align 8
  br label %20

16:                                               ; preds = %3
  %17 = load %struct.max732x_chip*, %struct.max732x_chip** %5, align 8
  %18 = getelementptr inbounds %struct.max732x_chip, %struct.max732x_chip* %17, i32 0, i32 0
  %19 = load %struct.i2c_client*, %struct.i2c_client** %18, align 8
  br label %20

20:                                               ; preds = %16, %12
  %21 = phi %struct.i2c_client* [ %15, %12 ], [ %19, %16 ]
  store %struct.i2c_client* %21, %struct.i2c_client** %8, align 8
  %22 = load %struct.i2c_client*, %struct.i2c_client** %8, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @i2c_smbus_write_byte(%struct.i2c_client* %22, i32 %23)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %32

27:                                               ; preds = %20
  %28 = load %struct.i2c_client*, %struct.i2c_client** %8, align 8
  %29 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %28, i32 0, i32 0
  %30 = call i32 @dev_err(i32* %29, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %31 = load i32, i32* %9, align 4
  store i32 %31, i32* %4, align 4
  br label %33

32:                                               ; preds = %20
  store i32 0, i32* %4, align 4
  br label %33

33:                                               ; preds = %32, %27
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @i2c_smbus_write_byte(%struct.i2c_client*, i32) #1

declare dso_local i32 @dev_err(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
